--- a/styles/colorGame.css
+++ b/styles/colorGame.css
@@ -23,7 +23,7 @@ body {
 }
 
 h1 {
-	color: white;
+	color: black;
 	line-height: 1.1;
 	text-align: center;
 	background: lavender;
@@ -42,14 +42,14 @@ h1 {
 }
 
 #stripe {
-	background-color: white;
+	background-color: black;
 	height: 30px;
 	text-align: center;
 	color: black;
 }
 
 .selected {
-	color: white;
+	color: black;
 	background: lightgreen;
 }
 
@@ -69,6 +69,6 @@ button {
 }
 
 button:hover {
-	color: white;
+	color: blue;
 	background-color: lavender;
 }
