--- a/styles/colorGame.css
+++ b/styles/colorGame.css
@@ -18,7 +18,7 @@ body {
 }
 
 #container {
-	max-width: 600px;
+	max-width: 900px;
 	margin: 0 auto;
 }
 
@@ -38,14 +38,17 @@ h1 {
 }
 #message {
 	display: inline-block;
-	width: 20%;
+	width: 22%;
+	color: white;
+	text-align: center;
 }
 
 #stripe {
-	background-color: black;
+	background-color: #232323;
 	height: 30px;
 	text-align: center;
-	color: black;
+	font-weight: normal;
+	line-height: 1.1;
 }
 
 .selected {
